<resources>
    <string name="app_name">kotlin-challenges</string>
    <string name="login_title">Welcome</string>
    <string name="login_text">Bienvenidx a mi primera aplicación para Android</string>
    <string name="login_text_email">Email address</string>
    <string name="login_text_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="mas_datos_superheroes1">Click aquí</string>
    <string name="mas_datos_superheroes2"> si quieres ver a los superheroes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>